# Final-Rating

./: CMakeLists.txt  README.md  argparser.cpp  argparser.h  correct.cpp  correct.h  errors.h  main.cpp  report.cpp  report.h  strategy.cpp  strategy.h
